poster moment responsiveness done

--- a/scss/components/poster-moment.scss
+++ b/scss/components/poster-moment.scss
@@ -17,21 +17,14 @@
 }
 
 .risd-quadrant {
-    width: 90%;
+    width: 100%;
     /* min-width: 45vw; */
     height: 50vh;
     /* min-height: 45vh; */
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
-    border-top: 4px solid $c-one;
-    border-left: 4px solid $c-one;
-    &:nth-child(2n) {
-        border-right: 4px solid $c-one;
-    }
-    &:nth-child(n+3) {
-        border-bottom: 4px solid $c-one;
-    }
+    border-bottom: 4px solid $c-one;
     @include v-tablet {
         width: 50%;
         /* min-width: 45vw; */
@@ -40,12 +33,11 @@
         display: flex;
         flex-wrap: wrap;
         box-sizing: border-box;
-        border-top: 4px solid $c-one;
-        border-left: 4px solid $c-one;
-        &:nth-child(2n) {
+        &:nth-child(2n+1) {
             border-right: 4px solid $c-one;
         }
         &:nth-child(n+3) {
+            border-top: 4px solid $c-one;
             border-bottom: 4px solid $c-one;
         }
     };
@@ -55,7 +47,7 @@
     position: absolute;
     font-size: 10vw;
     color: white;
-    width: 90%;
+    width: 98%;
     height: 50vh;
     display: flex;
     align-items: center;
@@ -117,17 +109,30 @@
     border: 4px solid $c-one;
     h2 {
         font-family: $t-font--one;
+        font-size: 6vmax;
+        @include v-laptop {
+            font-size: 5vmax;
+        };
     }
     span {
-        border-bottom: 4px solid $c-one;
+        border-bottom: 0.6vmax solid $c-one;
+        @include v-laptop {
+            border-bottom: 0.4vmax solid $c-one;
+        };
     }
 }
 
 .posterItem-campaignText--small {
     font-family: $t-font--one;
-
+    font-size: 3.5vmax;
+    @include v-laptop {
+        font-size: 2.7vmax;
+    };
     span {
-        border-bottom: 4px solid $c-one;
+        border-bottom: 0.3vmax solid $c-one;
+        @include v-laptop {
+            border-bottom: 0.3vmax solid $c-one;
+        };
     }
 }
 
@@ -141,6 +146,10 @@
     h2 {
         font-family: $t-font--two;
         font-weight: $t-weight--bold;
+        font-size: 6vmax;
+        @include v-laptop {
+            font-size: 5vmax;
+        };
     }
 }
 
@@ -148,4 +157,9 @@
     font-family: $t-font--two;
     font-weight: $t-weight--bold;
     @include t-allCaps;
+    font-size: 2.9vmax;
+
+    @include v-laptop {
+        font-size: 1.7vmax;
+    };
 }
