--- a/scss/components/nav-module.scss
+++ b/scss/components/nav-module.scss
@@ -53,7 +53,7 @@ svg#risd-seal:hover{
 	position:fixed;
 	width:100%;
 	height:100%;
-	background:rgba(255,255,255,0.9);
+	background: $c-three;
 	z-index:900;
 	left:-100%;
     transition: left 0.4s ease-in-out;
