--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -26,6 +26,12 @@ html {
     font-size: $t-size--base;
     color: $c-one;
     background-color: $c-two;
+    -moz-font-feature-settings:"ss02" 1;
+    -moz-font-feature-settings:"ss02=1";
+    -ms-font-feature-settings:"ss02" 1;
+    -o-font-feature-settings:"ss02" 1;
+    -webkit-font-feature-settings:"ss02" 1;
+    font-feature-settings:"ss02" 1;
     //lost-utility: edit;
 }
 
@@ -59,7 +65,7 @@ p {
 
 h1 {
     font-family: $t-font--one;
-    font-size: $t-size--xlarge;
+    font-size: $t-size--xxxlarge;
     font-weight: $t-weight--book;
     line-height: $t-lineHeight--tight;
     margin-bottom: $l-space--large;
@@ -70,10 +76,17 @@ h1 {
 
 h2 {
     font-family: $t-font--one;
-    font-size: $t-size--large;
+    font-size: $t-size--xlarge;
     font-weight: $t-weight--book;
     line-height: $t-lineHeight--tight;
     text-align: center;
+    @include v-tablet {
+        font-size: $t-size--xxlarge;
+    };
+    @include v-laptop {
+        font-size: $t-size--xxlarge;
+    };
+    @include v-desktop;
 }
 
 h3 {
