--- a/scss/site.scss
+++ b/scss/site.scss
@@ -29,6 +29,9 @@
 .campaign-intro {
 
 }
+.campaign-intro--title {
+    margin-bottom: $l-space--large;
+}
 .campaign-links {
     display: flex;
     box-sizing: border-box;
@@ -37,22 +40,16 @@
     width: 50%;
     text-align: center;
     box-sizing: border-box;
+    margin: $l-space--xxlarge auto;
     &:nth-child(2n+1) {
         margin-right: $l-space--large;
-    }
-    a {
-        display: inline-block;
-        max-width: 20rem;
-    }
-    span {
-        border-bottom: 2px solid $c-one;
     }
 }
 
 
 //Inauguration Page
 .inauguration {
-    margin-top: $l-space--xlarge;
+    margin-top: $l-space--small;
 }
 .inauguration-title {
 
@@ -68,7 +65,7 @@
     width: 50%;
     text-align: center;
     font-size: $t-size--large;
-    margin-bottom: $l-space--large;
+    margin: $l-space--xlarge auto;
     p {
         max-width: 20rem;
     }
@@ -77,7 +74,7 @@
     width: 50%;
     text-align: center;
     font-size: $t-size--large;
-    margin-bottom: $l-space--large;
+    margin: $l-space--xlarge auto;
     p {
         max-width: 20rem;
     }
@@ -87,36 +84,96 @@
 //President's Bio page
 .bio {
 }
-.bio-description {
-    h3 {
-        text-align: center;
-        font-family: $t-font--one;
-        margin-top: $l-space--xlarge;
-        margin-bottom: $l-space--medium;
-    }
+.biography {
     figure[data-type=quote] {
         margin: 0;
         padding: 0;
         border: none;
     }
     blockquote {
-        font-family: $t-font--two;
+        font-family: $t-font--one;
         font-style: normal;
-        font-size: $t-size--large;
+        font-size: $t-size--xlarge;
         text-align: center;
         line-height: $t-lineHeight--normal;
         margin: $l-space--medium auto;
         max-width: 20em;
     }
 }
+.biography-title {
+    text-align: center;
+    font-family: $t-font--one;
+    margin-top: $l-space--xlarge;
+    margin-bottom: $l-space--medium;
+    @include v-tablet {
+        font-size: $t-size--xxlarge;
+    };
+    @include v-laptop {
+        font-size: $t-size--xxlarge;
+        // display: inline-block;
+        // position: absolute;
+        // margin: 0;
+        // padding-bottom: 1rem;
+        // max-width: 15em;
+        // transform: rotateZ(270deg) translate(-100%, -100%);
+        // transform-origin: top left;
+    };
+    @include v-desktop;
+}
+.biography-title--timeline {
+    margin: 0 auto;
+    font-size: $t-size--xlarge;
+    max-width: 40rem;
+}
+
+
 // timeline
 .timeline {
-    margin-top: $l-space--large;
+    margin: $l-space--large auto 0 auto;
+    font-size: $t-size--medium;
+    border-top: 4px solid $c-one;
+    border-bottom: 4px solid $c-one;
+    // display: flex;
+    // flex-wrap: wrap;
+    // align-items: flex-start;
+    &:after {
+        content:"";
+        display:table;
+        clear:both;
+    }
+    p {
+        max-width: 15em;
+    }
 }
 .timeline-entry{
 	width:50%;
-	padding-bottom:$l-space--medium;
     text-align: center;
+    border-bottom: 4px solid $c-one;
+    box-sizing: border-box;
+    padding: $l-space--xxlarge 0;
+    &:nth-child(odd) {
+        border-right: 4px solid $c-one;
+        float: left;
+        .timeline-entry--item {
+            margin-left: 20%;
+        }
+    }
+    &:nth-child(even) {
+        float: right;
+        .timeline-entry--item {
+            margin-right: 20%;
+        }
+    }
+    &:first-child {
+        padding: $l-space--large 0;
+    }
+    &:last-child {
+        border-bottom: none;
+        padding: $l-space--xlarge 0;
+    }
+    &:nth-last-child(2) {
+        border-bottom: none;
+    }
 }
 .timeline-title{
     font-family: $t-font--one;
@@ -126,15 +183,7 @@
     font-family: $t-font--one;
     font-size: $t-size--xxlarge;
     padding: 0 $l-space--medium;
-    border-bottom: 2px solid $c-one;
     line-height: $t-lineHeight--tight;
-}
-.timeline-entry:nth-child(odd){
-	border-left:4px solid $c-one;
-	margin-left:50%;
-}
-.timeline-entry:nth-child(even){
-	border-right:4px solid $c-one;
 }
 
 
@@ -218,16 +267,31 @@
     border: 4px solid $c-one;
 }
 
-//Narrative Links
+//Links
 .narrativeLinks {
     text-align: center;
     box-sizing: border-box;
+    font-family: $t-font--one;
+    margin: $l-space--medium auto 0 auto;
+    a {
+        display: inline-block;
+        // max-width: 20rem;
+        padding: $l-space--small;
+        border: 4px solid $c-one;
+    }
+}
+.narrativeLinks-item {
+    font-family: $t-font--one;
+}
+.externalLinks {
+    text-align: center;
+    box-sizing: border-box;
     font-family: $t-font--two;
-    margin: $l-space--xxlarge auto;
     a {
         display: inline-block;
         max-width: 20rem;
-        padding: $l-space--small;
-        border: 4px solid $c-one;
+    }
+    span {
+        border-bottom: 2px solid $c-one;
     }
 }
