--- a/static/css/site.css
+++ b/static/css/site.css
@@ -56,21 +56,6 @@
   max-width: 90%;
   margin: 0 auto;
 }
-@media (min-width: 768px) {
-  .wideColumn {
-    max-width: 80%;
-  }
-}
-@media (min-width: 1024px) {
-  .wideColumn {
-    max-width: 70%;
-  }
-}
-@media (min-width: 1824px) {
-  .wideColumn {
-    max-width: 60%;
-  }
-}
 
 .narrowColumn {
   max-width: 90%;
@@ -243,6 +228,10 @@ html {
   font-size: 13px;
   color: black;
   background-color: #ffe800;
+  -ms-font-feature-settings: "ss02" 1;
+  -o-font-feature-settings: "ss02" 1;
+  -webkit-font-feature-settings: "ss02" 1;
+  font-feature-settings: "ss02" 1;
 }
 
 body {
@@ -280,7 +269,7 @@ p {
 
 h1 {
   font-family: "Circular", "Helvetica", "sans-serif";
-  font-size: 3rem;
+  font-size: 7rem;
   font-weight: 400;
   line-height: 1.2;
   margin-bottom: 4.165rem;
@@ -293,10 +282,20 @@ h1 {
 
 h2 {
   font-family: "Circular", "Helvetica", "sans-serif";
-  font-size: 2rem;
+  font-size: 3rem;
   font-weight: 400;
   line-height: 1.2;
   text-align: center;
+}
+@media (min-width: 768px) {
+  h2 {
+    font-size: 5rem;
+  }
+}
+@media (min-width: 1024px) {
+  h2 {
+    font-size: 5rem;
+  }
 }
 
 h3 {
@@ -412,21 +411,6 @@ article {
   max-width: 90%;
   margin: 0 auto;
 }
-@media (min-width: 768px) {
-  .wideColumn {
-    max-width: 80%;
-  }
-}
-@media (min-width: 1024px) {
-  .wideColumn {
-    max-width: 70%;
-  }
-}
-@media (min-width: 1824px) {
-  .wideColumn {
-    max-width: 60%;
-  }
-}
 
 .narrowColumn {
   max-width: 90%;
@@ -599,6 +583,10 @@ html {
   font-size: 13px;
   color: black;
   background-color: #ffe800;
+  -ms-font-feature-settings: "ss02" 1;
+  -o-font-feature-settings: "ss02" 1;
+  -webkit-font-feature-settings: "ss02" 1;
+  font-feature-settings: "ss02" 1;
 }
 
 body {
@@ -636,7 +624,7 @@ p {
 
 h1 {
   font-family: "Circular", "Helvetica", "sans-serif";
-  font-size: 3rem;
+  font-size: 7rem;
   font-weight: 400;
   line-height: 1.2;
   margin-bottom: 4.165rem;
@@ -649,10 +637,20 @@ h1 {
 
 h2 {
   font-family: "Circular", "Helvetica", "sans-serif";
-  font-size: 2rem;
+  font-size: 3rem;
   font-weight: 400;
   line-height: 1.2;
   text-align: center;
+}
+@media (min-width: 768px) {
+  h2 {
+    font-size: 5rem;
+  }
+}
+@media (min-width: 1024px) {
+  h2 {
+    font-size: 5rem;
+  }
 }
 
 h3 {
@@ -789,7 +787,7 @@ svg#risd-seal:hover path {
 }
 @media (min-width: 1824px) {
   .mainNav-item {
-    font-size: 8rem;
+    font-size: 7rem;
     line-height: 1.666;
   }
 }
@@ -858,21 +856,6 @@ svg#risd-seal:hover path {
 .wideColumn {
   max-width: 90%;
   margin: 0 auto;
-}
-@media (min-width: 768px) {
-  .wideColumn {
-    max-width: 80%;
-  }
-}
-@media (min-width: 1024px) {
-  .wideColumn {
-    max-width: 70%;
-  }
-}
-@media (min-width: 1824px) {
-  .wideColumn {
-    max-width: 60%;
-  }
 }
 
 .narrowColumn {
@@ -1046,6 +1029,10 @@ html {
   font-size: 13px;
   color: black;
   background-color: #ffe800;
+  -ms-font-feature-settings: "ss02" 1;
+  -o-font-feature-settings: "ss02" 1;
+  -webkit-font-feature-settings: "ss02" 1;
+  font-feature-settings: "ss02" 1;
 }
 
 body {
@@ -1083,7 +1070,7 @@ p {
 
 h1 {
   font-family: "Circular", "Helvetica", "sans-serif";
-  font-size: 3rem;
+  font-size: 7rem;
   font-weight: 400;
   line-height: 1.2;
   margin-bottom: 4.165rem;
@@ -1096,10 +1083,20 @@ h1 {
 
 h2 {
   font-family: "Circular", "Helvetica", "sans-serif";
-  font-size: 2rem;
+  font-size: 3rem;
   font-weight: 400;
   line-height: 1.2;
   text-align: center;
+}
+@media (min-width: 768px) {
+  h2 {
+    font-size: 5rem;
+  }
+}
+@media (min-width: 1024px) {
+  h2 {
+    font-size: 5rem;
+  }
 }
 
 h3 {
@@ -1202,6 +1199,7 @@ article {
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
     box-sizing: border-box;
+    border-bottom: none;
   }
   .risd-quadrant:nth-child(2n+1) {
     border-right: 4px solid black;
@@ -1237,7 +1235,7 @@ article {
 
 .risd-text {
   font-family: "Circular", "Helvetica", "sans-serif";
-  font-size: 28rem;
+  font-size: 62vh;
   margin-bottom: 1rem;
 }
 
@@ -1695,6 +1693,10 @@ article {
   margin-top: 13.328rem;
 }
 
+.campaign-intro--title {
+  margin-bottom: 4.165rem;
+}
+
 .campaign-links {
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1706,20 +1708,14 @@ article {
   width: 50%;
   text-align: center;
   box-sizing: border-box;
+  margin: 9.996rem auto;
 }
 .campaign-links--item:nth-child(2n+1) {
   margin-right: 4.165rem;
 }
-.campaign-links--item a {
-  display: inline-block;
-  max-width: 20rem;
-}
-.campaign-links--item span {
-  border-bottom: 2px solid black;
-}
 
 .inauguration {
-  margin-top: 6.664rem;
+  margin-top: 1.666rem;
 }
 
 .inauguration-info {
@@ -1740,7 +1736,7 @@ article {
   width: 50%;
   text-align: center;
   font-size: 2rem;
-  margin-bottom: 4.165rem;
+  margin: 6.664rem auto;
 }
 .inauguration-date p {
   max-width: 20rem;
@@ -1750,41 +1746,94 @@ article {
   width: 50%;
   text-align: center;
   font-size: 2rem;
-  margin-bottom: 4.165rem;
+  margin: 6.664rem auto;
 }
 .inauguration-address p {
   max-width: 20rem;
 }
 
-.bio-description h3 {
-  text-align: center;
-  font-family: "Circular", "Helvetica", "sans-serif";
-  margin-top: 6.664rem;
-  margin-bottom: 2.499rem;
-}
-.bio-description figure[data-type=quote] {
+.biography figure[data-type=quote] {
   margin: 0;
   padding: 0;
   border: none;
 }
-.bio-description blockquote {
-  font-family: "Mercury Display", "Georgia", "serif";
+.biography blockquote {
+  font-family: "Circular", "Helvetica", "sans-serif";
   font-style: normal;
-  font-size: 2rem;
+  font-size: 3rem;
   text-align: center;
   line-height: 1.666;
   margin: 2.499rem auto;
   max-width: 20em;
 }
 
+.biography-title {
+  text-align: center;
+  font-family: "Circular", "Helvetica", "sans-serif";
+  margin-top: 6.664rem;
+  margin-bottom: 2.499rem;
+}
+@media (min-width: 768px) {
+  .biography-title {
+    font-size: 5rem;
+  }
+}
+@media (min-width: 1024px) {
+  .biography-title {
+    font-size: 5rem;
+  }
+}
+
+.biography-title--timeline {
+  margin: 0 auto;
+  font-size: 3rem;
+  max-width: 40rem;
+}
+
 .timeline {
-  margin-top: 4.165rem;
+  margin: 4.165rem auto 0 auto;
+  font-size: 1.5rem;
+  border-top: 4px solid black;
+  border-bottom: 4px solid black;
+}
+.timeline:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.timeline p {
+  max-width: 15em;
 }
 
 .timeline-entry {
   width: 50%;
-  padding-bottom: 2.499rem;
   text-align: center;
+  border-bottom: 4px solid black;
+  box-sizing: border-box;
+  padding: 9.996rem 0;
+}
+.timeline-entry:nth-child(odd) {
+  border-right: 4px solid black;
+  float: left;
+}
+.timeline-entry:nth-child(odd) .timeline-entry--item {
+  margin-left: 20%;
+}
+.timeline-entry:nth-child(even) {
+  float: right;
+}
+.timeline-entry:nth-child(even) .timeline-entry--item {
+  margin-right: 20%;
+}
+.timeline-entry:first-child {
+  padding: 4.165rem 0;
+}
+.timeline-entry:last-child {
+  border-bottom: none;
+  padding: 6.664rem 0;
+}
+.timeline-entry:nth-last-child(2) {
+  border-bottom: none;
 }
 
 .timeline-title {
@@ -1796,17 +1845,7 @@ article {
   font-family: "Circular", "Helvetica", "sans-serif";
   font-size: 5rem;
   padding: 0 2.499rem;
-  border-bottom: 2px solid black;
   line-height: 1.2;
-}
-
-.timeline-entry:nth-child(odd) {
-  border-left: 4px solid black;
-  margin-left: 50%;
-}
-
-.timeline-entry:nth-child(even) {
-  border-right: 4px solid black;
 }
 
 .infoGraphic-category {
@@ -1908,13 +1947,29 @@ article {
 .narrativeLinks {
   text-align: center;
   box-sizing: border-box;
-  font-family: "Mercury Display", "Georgia", "serif";
-  margin: 9.996rem auto;
+  font-family: "Circular", "Helvetica", "sans-serif";
+  margin: 2.499rem auto 0 auto;
 }
 .narrativeLinks a {
   display: inline-block;
-  max-width: 20rem;
   padding: 1.666rem;
   border: 4px solid black;
+}
+
+.narrativeLinks-item {
+  font-family: "Circular", "Helvetica", "sans-serif";
+}
+
+.externalLinks {
+  text-align: center;
+  box-sizing: border-box;
+  font-family: "Mercury Display", "Georgia", "serif";
+}
+.externalLinks a {
+  display: inline-block;
+  max-width: 20rem;
+}
+.externalLinks span {
+  border-bottom: 2px solid black;
 }
 /*# sourceMappingURL=site.css.map */
