responsiveness for most of the site

--- a/scss/components/image-slider.scss
+++ b/scss/components/image-slider.scss
@@ -2,7 +2,11 @@
     // overflow: hidden;
     font-size: $t-size--medium;
     margin-top: $l-space--large;
+    width: 90%;
     @include l-textWidth;
+    @include v-tablet {
+        width: 100%;
+    };
     img {
         max-width: 100%;
         border: 4px solid $c-one;
@@ -29,7 +33,6 @@
     padding: 0;
     border: none;
     outline: none;
-    z-index: 5000;
     justify-content: center;
     align-items: center;
 }
@@ -47,7 +50,6 @@
     padding: 0;
     border: none;
     outline: none;
-    z-index: 5000;
     justify-content: center;
     align-items: center;
 }
