--- a/scss/site.scss
+++ b/scss/site.scss
@@ -55,7 +55,10 @@
 
 //Inauguration Page
 .inauguration {
-    margin-top: $l-space--small;
+    margin-top: $l-space--medium;
+    @include v-tablet {
+        margin-top: $l-space--small;
+    };
 }
 .inauguration-title {
     margin-bottom: $l-space--xlarge;
@@ -238,7 +241,10 @@
 
 //Fact Sheet
 .factSheet {
-    margin-top: $l-space--small;
+    margin-top: $l-space--medium;
+    @include v-tablet {
+        margin-top: $l-space--small;
+    };
 }
 .factSheet-title {
     margin-bottom: $l-space--medium;
@@ -271,19 +277,23 @@
     @include l-textWidth;
 }
 .factSheet-description--image {
-    max-width: 10%;
-
-    border: 4px solid $c-one;
-    box-sizing: border-box;
-    display: inline-block;
-    position: absolute;
-    // margin: 0;
+    max-width: 100%;
     padding-bottom: 1rem;
-    transform: translate(-100%, 0);
-    transform-origin: top left;
+    @include v-tablet {
+        max-width: 10%;
+        transform: translate(-120%, 0);
+        transform-origin: top left;
+        display: inline-block;
+        position: absolute;
+    };
+    @include v-laptop {
+        max-width: 15%;
+    };
     img {
         width: 100%;
         margin-right: $l-space--large;
+        border: 4px solid $c-one;
+        box-sizing: border-box;
     }
 }
 .infoGraphic-category {
