--- a/static/css/site.css
+++ b/static/css/site.css
@@ -749,21 +749,43 @@ article {
 .hamburger-activator {
   max-width: 30px;
   max-height: 30px;
-  margin-left: 1rem;
+  margin-left: 5vw;
+  margin-top: -4px;
+}
+@media (min-width: 768px) {
+  .hamburger-activator {
+    margin-left: 1vw;
+  }
+}
+@media (min-width: 1024px) {
+  .hamburger-activator {
+    margin-left: 1.5vw;
+  }
 }
 .hamburger-activator:hover {
   cursor: pointer;
 }
 .hamburger-activator line {
   stroke: black;
-  stroke-width: 3;
+  stroke-width: 4;
 }
 
 .risd-link {
   position: absolute;
   right: 0;
   display: inline-block;
-  margin-right: 1rem;
+  margin-right: 5vw;
+  margin-top: -4px;
+}
+@media (min-width: 768px) {
+  .risd-link {
+    margin-right: 0;
+  }
+}
+@media (min-width: 1024px) {
+  .risd-link {
+    margin-right: 0.7vw;
+  }
 }
 
 svg#risd-seal {
@@ -1778,7 +1800,12 @@ article {
 }
 
 .inauguration {
-  margin-top: 1.666rem;
+  margin-top: 2.499rem;
+}
+@media (min-width: 768px) {
+  .inauguration {
+    margin-top: 1.666rem;
+  }
 }
 
 .inauguration-title {
@@ -1986,7 +2013,12 @@ article {
 }
 
 .factSheet {
-  margin-top: 1.666rem;
+  margin-top: 2.499rem;
+}
+@media (min-width: 768px) {
+  .factSheet {
+    margin-top: 1.666rem;
+  }
 }
 
 .factSheet-title {
@@ -2032,22 +2064,32 @@ article {
 }
 
 .factSheet-description--image {
-  max-width: 10%;
-  border: 4px solid black;
-  box-sizing: border-box;
-  display: inline-block;
-  position: absolute;
+  max-width: 100%;
   padding-bottom: 1rem;
-  -webkit-transform: translate(-100%, 0);
-      -ms-transform: translate(-100%, 0);
-          transform: translate(-100%, 0);
-  -webkit-transform-origin: top left;
-      -ms-transform-origin: top left;
-          transform-origin: top left;
+}
+@media (min-width: 768px) {
+  .factSheet-description--image {
+    max-width: 10%;
+    -webkit-transform: translate(-120%, 0);
+        -ms-transform: translate(-120%, 0);
+            transform: translate(-120%, 0);
+    -webkit-transform-origin: top left;
+        -ms-transform-origin: top left;
+            transform-origin: top left;
+    display: inline-block;
+    position: absolute;
+  }
+}
+@media (min-width: 1024px) {
+  .factSheet-description--image {
+    max-width: 15%;
+  }
 }
 .factSheet-description--image img {
   width: 100%;
   margin-right: 4.165rem;
+  border: 4px solid black;
+  box-sizing: border-box;
 }
 
 .infoGraphic-category {
