--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,16 +1,16 @@
 {# Simple search form, remove from search index #}
 
 {% set navData = [{
-name: 'home',
+name: 'Home',
 url:  '/'
 },{
-name: 'inauguration',
+name: 'Inauguration',
 url:  '/inauguration'
 }, {
-name: 'president’s bio',
+name: 'President’s Bio',
 url:  '/bio'
 }, {
-name: 'risd facts',
+name: 'RISD Facts',
 url:  '/fact-sheet'
 }]
 %}
