--- a/scss/site.scss
+++ b/scss/site.scss
@@ -385,6 +385,10 @@
         // max-width: 20rem;
         padding: $l-space--small;
         border: 4px solid $c-one;
+        &:hover {
+            background-color: $c-one;
+            color: $c-three;
+        }
     }
 }
 .narrativeLinks-item {
