factsheet type size fix

--- a/scss/site.scss
+++ b/scss/site.scss
@@ -314,7 +314,7 @@
     border-bottom: 4px solid $c-one;
     width: 100%;
     @include v-tablet {
-        font-size: $t-size--large;
+        font-size: $t-size--xlarge;
     };
 }
 .infoGraphic-item {
