--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -49,6 +49,10 @@ url:  '/fact-sheet'
         {% endif %}
         {% if loop.first %}
     <nav class="mainNav">
+    <svg class="hamburger-deactivator" enable-background="new 0 0 50 50" height="50px" id="Layer_1" version="1.1" viewBox="0 0 50 50" width="50px" x="0px" xml:space="preserve" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" y="0px">
+        <line fill="none" stroke-miterlimit="10" stroke-width="2" stroke="#000000" x1="3.4" x2="32.2" y1="10.6" y2="39.4" />
+        <line fill="none" stroke-miterlimit="10" stroke-width="2" stroke="#000000" x1="3.4" x2="32.2" y1="39.4" y2="10.6" />
+    </svg>
         <ul class="mainNav-list">
         {% endif %}
             <li class="{{ cls }} mainNav-item">
