--- a/scss/components/nav-module.scss
+++ b/scss/components/nav-module.scss
@@ -14,10 +14,12 @@
 	top: 5vh;
 }
 .hamburger-activator{
+	position: relative;
     max-width:30px;
     max-height:30px;
     margin-left: 5vw;
 	margin-top: -4px;
+	z-index:800;
 	@include v-tablet {
 		margin-left: 1vw;
 	};
@@ -29,6 +31,21 @@
     }
     line{
         stroke:$c-one;
+        stroke-width:4;
+    }
+}
+.hamburger-deactivator{
+	position: absolute;
+    max-width:35px;
+    max-height:35px;
+    margin-left: 2rem;
+	margin-top: 2rem;
+	z-index:1500;
+    &:hover {
+        cursor:pointer;
+    }
+    line{
+        stroke:$c-three;
         stroke-width:4;
     }
 }
@@ -46,7 +63,8 @@
 	};
 }
 svg#risd-seal{
-    z-index:1010;
+	position: relative;
+    z-index:1210;
     // position:fixed;
     max-width:50px;
     max-height:50px;
@@ -63,7 +81,7 @@ svg#risd-seal{
 	height:100%;
 	background-color: $c-one;
 	color: $c-three;
-	z-index:900;
+	z-index:1200;
 	left:-100%;
     transition: left 0.4s ease-in-out;
 	top: 0;
