--- a/scss/components/poster-moment.scss
+++ b/scss/components/poster-moment.scss
@@ -25,6 +25,8 @@
     flex-wrap: wrap;
     box-sizing: border-box;
     border-bottom: 4px solid $c-one;
+    background-color: $c-two;
+    z-index: 2000;
     @include v-tablet {
         width: 50%;
         /* min-width: 45vw; */
@@ -46,7 +48,7 @@
 
 .risd-container {
     position: absolute;
-    z-index: -1000;
+    // z-index: -1000;
     font-size: 10vw;
     color: white;
     width: 98%;
